--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<th><input type="text" name="username" id=name_input value="UserName"></th>
 	<th><input type="text" name="useroccupation" id=occupation_input value="UserOccupation"></th>
 	<th><button type="button" onclick="addInfo()">Add</button></th>
+	<th><button type="button" onclick="clearInfo()">Clear</button></th>
 </tr>
 </table>
 
@@ -112,6 +113,14 @@
 			}
 			
 
+		}
+		
+		function addInfo() { 
+			
+			var input1 = document.getElementById("").value;
+			var input2 = document.getElementById("").value;
+			var input3 = document.getElementById("").value;
+			
 		};
 		
 		
