--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
 
 		}
 		
-		function addInfo() { 
+		function clearInfo() { 
 			
-			var input1 = document.getElementById("").value;
-			var input2 = document.getElementById("").value;
-			var input3 = document.getElementById("").value;
+			var input1 = document.getElementById("id_input").value="";
+			var input2 = document.getElementById("name_input").value="";
+			var input3 = document.getElementById("occupation_input").value="";
 			
 		};
 		
