--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@
 			}
 			
 
-		}
-		
-		function clearInfo() { 
-			
-			var input1 = document.getElementById("id_input").value="";
-			var input2 = document.getElementById("name_input").value="";
-			var input3 = document.getElementById("occupation_input").value="";
-			
 		};
+		
+		//function clearInfo(str) { 
+			
+			//var input1 = document.getElementById("id_input").value="";
+			//var input2 = document.getElementById("name_input").value="";
+			//var input3 = document.getElementById("occupation_input").value="";
+			
+		//}
 		
 		
  </script>
