--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
 
 		};
 		
-		//function clearInfo(str) { 
+		function clearInfo(str) { 
 			
-			//var input1 = document.getElementById("id_input").value="";
-			//var input2 = document.getElementById("name_input").value="";
-			//var input3 = document.getElementById("occupation_input").value="";
+			var input1 = document.getElementById("id_input").value="";
+			var input2 = document.getElementById("name_input").value="";
+			var input3 = document.getElementById("occupation_input").value="";
 			
 		
 		
